src/app/pages/projects/projects.component.scss
@import "/src/styles.scss";

:host {
  position: relative;
  height: max-content;
  width: 100%;
  overflow-y: visible;
  margin-top: calc(var(--responsiveUnit) * 5);
  padding-block: 1%;
  color: $light;
}

#content {
  height: 100%;
  width: 100%;
  font-size: calc(var(--responsiveUnit) * 1.5);
}

.cards-wrapper {
  display: flex;
  justify-content: center;
  align-items: center;
  flex-wrap: wrap;

  .card {
    display: flex;
    flex-direction: column;
    height: calc(var(--responsiveUnit) * 16);
    width: calc(var(--responsiveUnit) * 12);
    margin: 1%;
    border: 4px solid transparentize($color: $dark, $amount: 0.5);
    border-radius: 15px;
    overflow: hidden;
    &:hover {
      border: 4px solid $light;
      transition: 350ms;
      transform: scale(1.05);
      cursor: pointer;
    }

    .card-picture {
      height: 60%;
      width: 100%;
      border-top-left-radius: 15px;
      border-top-right-radius: 15px;

      img {
        border-top-left-radius: 15px;
        border-top-right-radius: 15px;
        height: 100%;
        width: 100%;
        object-fit: cover;
        object-position: center;
      }
    }

    .card-info {
      position: relative;
      height: 40%;
      width: 100%;
      background: $dark;
      border-bottom-left-radius: 15px;
      border-bottom-right-radius: 15px;
      &::before {
        content: "";
        position: absolute;
        top: calc(var(--responsiveUnit) * -1.95);
        left: 0;
        height: calc(var(--responsiveUnit) * 2);
        width: 100%;
        background: linear-gradient(to top, $dark 15%, transparent);
      }

      h1 {
        font-size: calc(var(--responsiveUnit) * 1.1);
        margin: 3%;
        padding: 0;
        font-family: "CaviarDreams";
      }

      p {
        font-size: calc(var(--responsiveUnit) * 0.85);
        margin: 3%;
        padding: 0;
        font-family: "Roboto";
      }
    }
  }
}

